Fix guava usages and enforce w/ forbiddenapis